crates/nash-parse/src/snapshots/nash_parse__module__tests__comments_in_tests_and_strings.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 709
description: "Code:\n\ntext = \"-- not a comment {- neither -}\"\ntests\n    -- test note\n    test \"works\" = do\n        assert {- assertion note -} True\n"
---
Module {
    kind: Normal,
    name: None,
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 1,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    comments: [
        SourceComment {
            region: Region {
                start: Position {
                    line: 3,
                    column: 5,
                },
                end: Position {
                    line: 3,
                    column: 17,
                },
            },
            kind: Line,
            text: " test note",
        },
        SourceComment {
            region: Region {
                start: Position {
                    line: 5,
                    column: 16,
                },
                end: Position {
                    line: 5,
                    column: 36,
                },
            },
            kind: Block,
            text: " assertion note ",
        },
    ],
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 1,
                },
            },
            value: Value {
                docs: None,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "text",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 40,
                        },
                    },
                    value: Str(
                        "-- not a comment {- neither -}",
                    ),
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    unions: [],
    aliases: [],
    traits: [],
    impls: [],
    tests: Some(
        Tests {
            imports: [],
            tests: [
                Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 41,
                        },
                    },
                    value: Test {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 10,
                                },
                                end: Position {
                                    line: 4,
                                    column: 17,
                                },
                            },
                            value: "works",
                        },
                        expect: Pass,
                        budget: None,
                        body: Unit(
                            Block {
                                stmts: [],
                                last: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 41,
                                        },
                                    },
                                    value: Assert(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 37,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 41,
                                                },
                                            },
                                            value: Var {
                                                kind: CapVar,
                                                name: "True",
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ],
        },
    ),
    binops: [],
}
