crates/nash-parse/src/snapshots/nash_parse__module__tests__comments_preserve_unicode_and_crlf.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 655
description: "Code:\n\n-- café\r\nx = 1 -- 終"
---
Module {
    kind: Normal,
    name: None,
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 1,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 2,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 13,
            },
        },
    ),
    comments: [
        SourceComment {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            kind: Line,
            text: " café",
        },
        SourceComment {
            region: Region {
                start: Position {
                    line: 2,
                    column: 7,
                },
                end: Position {
                    line: 2,
                    column: 13,
                },
            },
            kind: Line,
            text: " 終",
        },
    ],
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 13,
                },
            },
            value: Value {
                docs: None,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 1,
                        },
                        end: Position {
                            line: 2,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    unions: [],
    aliases: [],
    traits: [],
    impls: [],
    tests: None,
    binops: [],
}
