crates/nash-parse/src/snapshots/nash_parse__module__tests__doc_comment_attaches_to_value.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 660
description: "Code:\n\n{-| value docs -}\nx = 1"
---
Module {
    kind: Normal,
    name: None,
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 1,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 6,
            },
        },
    ),
    comments: [],
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 6,
                },
            },
            value: Value {
                docs: Some(
                    Comment {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 1,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        snippet: Snippet {
                            data: [
                                32,
                                118,
                                97,
                                108,
                                117,
                                101,
                                32,
                                100,
                                111,
                                99,
                                115,
                                32,
                            ],
                            off_row: 1,
                            off_col: 4,
                        },
                    },
                ),
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 1,
                        },
                        end: Position {
                            line: 2,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    unions: [],
    aliases: [],
    traits: [],
    impls: [],
    tests: None,
    binops: [],
}
